--- a/src/app/layouts/login/login.component.css
+++ b/src/app/layouts/login/login.component.css
@@ -1,10 +1,11 @@
 .profile-card {
     text-align: center;
     padding: 10px 20px 0px 20px;
-    .img {
-      width: 150px;
-      height: 150px;
-      object-fit:contain;
-      border-radius: 30%;
-    }
+    
+  }
+  .profile-card > .img {
+    width: 150px;
+    height: 150px;
+    object-fit:contain;
+    border-radius: 30%;
   }
